tests/ui/resolve/dont-compute-arg-names-for-non-fn.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/dont-compute-arg-names-for-non-fn.rs:8:14
   |
LL | impl Foo for Bar {}
   |              ^^^
   |
help: you might have meant to use the associated type
   |
LL | impl Foo for Self::Bar {}
   |              ++++++

error: hi
  --> $DIR/dont-compute-arg-names-for-non-fn.rs:8:1
   |
LL | impl Foo for Bar {}
   | ^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
  ::: $DIR/auxiliary/foreign-trait-with-assoc.rs:1:1
   |
LL | pub trait Foo {
   | ------------- built-in `dyn Foo<Bar = _>` implementation for this trait
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
